removed null values

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows with NA values removed. Cleaned data saved to postoffice_cleaned.csv\n"
+      "Non-convertible values in 'established' column:\n",
+      "Series([], Name: established, dtype: float64)\n"
      ]
     }
    ],
@@ -23,10 +24,37 @@
     "\n",
     "# Remove the specified columns\n",
     "df_cleaned = df.drop(columns=columns_to_remove)\n",
-    "df_cleaned = df_cleaned.dropna(subset=['latitude', 'longitude'])\n",
-    "# Remove rows with NA values\n",
-    "# df_cleaned = df.dropna()\n",
-    "df_cleaned['duration'] = df_cleaned.apply(lambda row: (2021 - row['established']) if pd.notnull(row['established']) else row['duration'], axis=1)\n",
+    "df_cleaned = df_cleaned.dropna(subset=['latitude', 'longitude', 'established'])\n",
+    "\n",
+    "# Calculate 'duration' based on 'established' column if it's missing\n",
+    "df_cleaned['duration'] = df_cleaned.apply(lambda row: (2021 - row['established']) if pd.isnull(row['duration']) else row['duration'], axis=1)\n",
+    "\n",
+    "# Check for non-convertible values in 'established' column\n",
+    "non_convertible_established = df_cleaned[df_cleaned['established'].isnull()]['established']\n",
+    "print(\"Non-convertible values in 'established' column:\")\n",
+    "print(non_convertible_established)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows with NA values removed. Cleaned data saved to postoffice_cleaned.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Convert 'duration' and 'established' columns to integers\n",
+    "df_cleaned['duration'] = df_cleaned['duration'].astype(int)\n",
+    "df_cleaned['established'] = df_cleaned['established'].astype(int)\n",
+    "\n",
+    "\n",
     "# Write the cleaned data to a new CSV file\n",
     "df_cleaned.to_csv(\"postoffice_cleaned.csv\", index=False)\n",
     "\n",
@@ -35,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "State-wise post office data saved to state_post_offices.csv\n"
+      "State-wise post office data saved to statewise_post_offices.csv\n"
      ]
     }
    ],
@@ -76,15 +104,29 @@
     "state_post_offices_long = df_cleaned.groupby('state_longform').size().reset_index(name='num_post_offices')\n",
     "\n",
     "# Map long state names back to short state names\n",
-    "state_post_offices_long['state'] = state_post_offices_long['state_long'].map(state_names_short)\n",
+    "state_post_offices_long['state'] = state_post_offices_long['state_longform'].map(state_names_short)\n",
     "\n",
     "# Concatenate short and long state names with aggregated number of post offices\n",
-    "state_post_offices = pd.concat([state_post_offices_long[['state', 'state_long', 'num_post_offices']], state_post_offices_long[['state', 'state_long', 'num_post_offices']]])\n",
+    "state_post_offices = pd.concat([state_post_offices_long[['state', 'state_longform', 'num_post_offices']], state_post_offices_long[['state', 'state_longform', 'num_post_offices']]])\n",
+    "\n",
+    "# Calculate the centroid of each state and save it to the CSV\n",
+    "centroid_latitudes = []\n",
+    "centroid_longitudes = []\n",
+    "\n",
+    "for state_longform in state_post_offices['state_longform']:\n",
+    "    state_data = df_cleaned[df_cleaned['state_longform'] == state_longform]\n",
+    "    centroid_latitude = state_data['latitude'].mean()\n",
+    "    centroid_longitude = state_data['longitude'].mean()\n",
+    "    centroid_latitudes.append(centroid_latitude)\n",
+    "    centroid_longitudes.append(centroid_longitude)\n",
+    "\n",
+    "state_post_offices['centroid_latitude'] = centroid_latitudes\n",
+    "state_post_offices['centroid_longitude'] = centroid_longitudes\n",
     "\n",
     "# Write the aggregated data to a new CSV file\n",
     "state_post_offices.to_csv(\"statewise_post_offices.csv\", index=False)\n",
     "\n",
-    "print(\"State-wise post office data saved to state_post_offices.csv\")\n"
+    "print(\"State-wise post office data saved to statewise_post_offices.csv\")\n"
    ]
   },
   {
