--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Non-convertible values in 'established' column:\n",
-      "Series([], Name: established, dtype: float64)\n"
+      "28676\n"
      ]
     }
    ],
@@ -25,19 +25,20 @@
     "# Remove the specified columns\n",
     "df_cleaned = df.drop(columns=columns_to_remove)\n",
     "df_cleaned = df_cleaned.dropna(subset=['latitude', 'longitude', 'established'])\n",
-    "\n",
+    "# Keep only the current running offices\n",
+    "df_cleaned = df_cleaned[df_cleaned['duration'].isna()]\n",
     "# Calculate 'duration' based on 'established' column if it's missing\n",
     "df_cleaned['duration'] = df_cleaned.apply(lambda row: (2021 - row['established']) if pd.isnull(row['duration']) else row['duration'], axis=1)\n",
     "\n",
     "# Check for non-convertible values in 'established' column\n",
     "non_convertible_established = df_cleaned[df_cleaned['established'].isnull()]['established']\n",
     "print(\"Non-convertible values in 'established' column:\")\n",
-    "print(non_convertible_established)\n"
+    "print(len(df_cleaned))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
