Getting the top 1000 entries in the data

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,27 @@
      "output_type": "stream",
      "text": [
       "Non-convertible values in 'established' column:\n",
-      "28676\n"
+      "28676\n",
+      "                      name            orig_name state     orig_county  \\\n",
+      "80712             ELKRIDGE         ELKRIDGE (2)    MD          Howard   \n",
+      "37044          MIAMI BEACH          MIAMI BEACH    FL            Dade   \n",
+      "83431      FORT WASHINGTON  FORT WASHINGTON (2)    MD  Prince Georges   \n",
+      "3309   BATESBURG-LEESVILLE  BATESBURG-LEESVILLE    SC       Lexington   \n",
+      "43810           PARK HILLS           PARK HILLS    MO    St. Francois   \n",
+      "\n",
+      "       established  continuous  stamp_index  coordinates  duration   latitude  \\\n",
+      "80712       2000.0        True          0.0         True      21.0  39.190580   \n",
+      "37044       1999.0        True          0.0         True      22.0  25.784469   \n",
+      "83431       1996.0        True          0.0         True      25.0  38.730840   \n",
+      "3309        1995.0        True          0.0         True      26.0  33.916532   \n",
+      "43810       1995.0        True          0.0         True      26.0  37.850758   \n",
+      "\n",
+      "       longitude  \n",
+      "80712 -76.747780  \n",
+      "37044 -80.132489  \n",
+      "83431 -76.991650  \n",
+      "3309  -81.513437  \n",
+      "43810 -90.521844  \n"
      ]
     }
    ],
@@ -33,12 +53,20 @@
     "# Check for non-convertible values in 'established' column\n",
     "non_convertible_established = df_cleaned[df_cleaned['established'].isnull()]['established']\n",
     "print(\"Non-convertible values in 'established' column:\")\n",
-    "print(len(df_cleaned))\n"
+    "print(len(df_cleaned))\n",
+    "\n",
+    "df_cleaned_sorted = df_cleaned.sort_values(by='established', ascending=False)\n",
+    "\n",
+    "# Keep only the top 1000 recent post offices\n",
+    "df_top_1000_recent = df_cleaned_sorted.head(1000)\n",
+    "\n",
+    "# Check the first few rows of the resulting DataFrame\n",
+    "print(df_top_1000_recent.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -47,24 +75,42 @@
      "text": [
       "Rows with NA values removed. Cleaned data saved to postoffice_cleaned.csv\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mt/rp9xph9j5nvb8zt52znkhhr00000gn/T/ipykernel_46903/515352458.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_top_1000_recent['duration'] = df_top_1000_recent['duration'].astype(int)\n",
+      "/var/folders/mt/rp9xph9j5nvb8zt52znkhhr00000gn/T/ipykernel_46903/515352458.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_top_1000_recent['established'] = df_top_1000_recent['established'].astype(int)\n"
+     ]
     }
    ],
    "source": [
     "\n",
     "# Convert 'duration' and 'established' columns to integers\n",
-    "df_cleaned['duration'] = df_cleaned['duration'].astype(int)\n",
-    "df_cleaned['established'] = df_cleaned['established'].astype(int)\n",
+    "df_top_1000_recent['duration'] = df_top_1000_recent['duration'].astype(int)\n",
+    "df_top_1000_recent['established'] = df_top_1000_recent['established'].astype(int)\n",
     "\n",
     "\n",
     "# Write the cleaned data to a new CSV file\n",
-    "df_cleaned.to_csv(\"postoffice_cleaned.csv\", index=False)\n",
+    "df_top_1000_recent.to_csv(\"postoffice_cleaned_top1000.csv\", index=False)\n",
     "\n",
     "print(\"Rows with NA values removed. Cleaned data saved to postoffice_cleaned.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +125,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read the cleaned CSV file\n",
-    "df_cleaned = pd.read_csv(\"postoffice_cleaned.csv\")\n",
+    "df_cleaned = pd.read_csv(\"postoffice_cleaned_top1000.csv\")\n",
     "\n",
     "# Dictionary mapping short names to long names of states\n",
     "state_names_long = {\n",
@@ -125,7 +171,7 @@
     "state_post_offices['centroid_longitude'] = centroid_longitudes\n",
     "\n",
     "# Write the aggregated data to a new CSV file\n",
-    "state_post_offices.to_csv(\"statewise_post_offices.csv\", index=False)\n",
+    "state_post_offices.to_csv(\"statewise_post_offices_top1000.csv\", index=False)\n",
     "\n",
     "print(\"State-wise post office data saved to statewise_post_offices.csv\")\n"
    ]
