--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,34 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "                 name      orig_name state orig_county  established  \\\n",
+      "2               AARON          AARON    MO       Bates       1895.0   \n",
+      "5               AARON          AARON    GA     Bulloch       1909.0   \n",
+      "7               AARON          AARON    SC    Anderson       1892.0   \n",
+      "8          AARONSBURG  AARONSBURG(H)    PA      Centre       1792.0   \n",
+      "11             ABADYL         ABADYL    MO   Christian       1895.0   \n",
+      "...               ...            ...   ...         ...          ...   \n",
+      "166129         ZURICH         ZURICH    MT      Blaine       1907.0   \n",
+      "166131           ZYBA           ZYBA    KS      Sumner       1887.0   \n",
+      "166133         ZYBACH         ZYBACH    TX     Wheeler       1910.0   \n",
+      "166136           TRUE           TRUE    TX       Young       1894.0   \n",
+      "166137  SIERRA BLANCA  SIERRA BLANCA    TX    Hudspeth       1882.0   \n",
+      "\n",
+      "        continuous  stamp_index  coordinates  duration   latitude   longitude  \n",
+      "2             True          2.0         True      38.0  38.422222  -94.154167  \n",
+      "5             True          3.0         True      11.0  32.568220  -81.992340  \n",
+      "7             True          6.0         True       7.0  34.577053  -82.623466  \n",
+      "8             True          0.0         True     229.0  40.898967  -77.452199  \n",
+      "11            True          4.0         True      24.0  37.038386  -92.947119  \n",
+      "...            ...          ...          ...       ...        ...         ...  \n",
+      "166129        True          0.0         True     114.0  48.584330 -109.031700  \n",
+      "166131        True          5.0         True      19.0  37.434740  -97.389210  \n",
+      "166133        True          2.0         True      21.0  35.619210 -100.190700  \n",
+      "166136        True          4.0         True      18.0  33.279830  -98.728670  \n",
+      "166137        True          0.0         True     139.0  31.175930 -105.360000  \n",
+      "\n",
+      "[112490 rows x 11 columns]\n",
       "Non-convertible values in 'established' column:\n",
-      "28676\n",
-      "                      name            orig_name state     orig_county  \\\n",
-      "80712             ELKRIDGE         ELKRIDGE (2)    MD          Howard   \n",
-      "37044          MIAMI BEACH          MIAMI BEACH    FL            Dade   \n",
-      "83431      FORT WASHINGTON  FORT WASHINGTON (2)    MD  Prince Georges   \n",
-      "3309   BATESBURG-LEESVILLE  BATESBURG-LEESVILLE    SC       Lexington   \n",
-      "43810           PARK HILLS           PARK HILLS    MO    St. Francois   \n",
+      "                  name            orig_name state     orig_county  \\\n",
+      "80712         ELKRIDGE         ELKRIDGE (2)    MD          Howard   \n",
+      "37044      MIAMI BEACH          MIAMI BEACH    FL            Dade   \n",
+      "18486           ENGINE               ENGINE    MS         Neshoba   \n",
+      "83431  FORT WASHINGTON  FORT WASHINGTON (2)    MD  Prince Georges   \n",
+      "43810       PARK HILLS           PARK HILLS    MO    St. Francois   \n",
       "\n",
       "       established  continuous  stamp_index  coordinates  duration   latitude  \\\n",
       "80712       2000.0        True          0.0         True      21.0  39.190580   \n",
       "37044       1999.0        True          0.0         True      22.0  25.784469   \n",
+      "18486       1999.0       False          2.0         True     -90.0  32.639026   \n",
       "83431       1996.0        True          0.0         True      25.0  38.730840   \n",
-      "3309        1995.0        True          0.0         True      26.0  33.916532   \n",
       "43810       1995.0        True          0.0         True      26.0  37.850758   \n",
       "\n",
       "       longitude  \n",
       "80712 -76.747780  \n",
       "37044 -80.132489  \n",
+      "18486 -89.092281  \n",
       "83431 -76.991650  \n",
-      "3309  -81.513437  \n",
       "43810 -90.521844  \n"
      ]
     }
@@ -45,15 +71,22 @@
     "# Remove the specified columns\n",
     "df_cleaned = df.drop(columns=columns_to_remove)\n",
     "df_cleaned = df_cleaned.dropna(subset=['latitude', 'longitude', 'established'])\n",
+    "\n",
+    "\n",
     "# Keep only the current running offices\n",
-    "df_cleaned = df_cleaned[df_cleaned['duration'].isna()]\n",
+    "#df_cleaned = df_cleaned[df_cleaned['duration'].isna()]\n",
+    "\n",
     "# Calculate 'duration' based on 'established' column if it's missing\n",
     "df_cleaned['duration'] = df_cleaned.apply(lambda row: (2021 - row['established']) if pd.isnull(row['duration']) else row['duration'], axis=1)\n",
+    "\n",
+    "print(df_cleaned)\n",
     "\n",
     "# Check for non-convertible values in 'established' column\n",
     "non_convertible_established = df_cleaned[df_cleaned['established'].isnull()]['established']\n",
     "print(\"Non-convertible values in 'established' column:\")\n",
-    "print(len(df_cleaned))\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "df_cleaned_sorted = df_cleaned.sort_values(by='established', ascending=False)\n",
     "\n",
@@ -66,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
