Updated stamp indices values

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,9 @@
     "df_cleaned_sorted = df_cleaned.sort_values(by='established', ascending=False)\n",
     "\n",
     "# Keep only the top 1000 recent post offices\n",
-    "df_top_1000_recent = df_cleaned_sorted.head(1000)\n",
+    "#df_top_1000_recent = df_cleaned_sorted.head(1000)\n",
+    "\n",
+    "df_top_1000_recent = df_cleaned_sorted\n",
     "\n",
     "# Check the first few rows of the resulting DataFrame\n",
     "print(df_top_1000_recent.head())\n"
@@ -136,7 +138,7 @@
     "\n",
     "\n",
     "# Write the cleaned data to a new CSV file\n",
-    "df_top_1000_recent.to_csv(\"postoffice_cleaned_top1000.csv\", index=False)\n",
+    "df_top_1000_recent.to_csv(\"postoffice_cleaned.csv\", index=False)\n",
     "\n",
     "print(\"Rows with NA values removed. Cleaned data saved to postoffice_cleaned.csv\")\n"
    ]
@@ -204,7 +206,7 @@
     "state_post_offices['centroid_longitude'] = centroid_longitudes\n",
     "\n",
     "# Write the aggregated data to a new CSV file\n",
-    "state_post_offices.to_csv(\"statewise_post_offices_top1000.csv\", index=False)\n",
+    "state_post_offices.to_csv(\"statewise_post_offices.csv\", index=False)\n",
     "\n",
     "print(\"State-wise post office data saved to statewise_post_offices.csv\")\n"
    ]
