--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -22,20 +22,20 @@
       "166136           TRUE           TRUE    TX       Young       1894.0   \n",
       "166137  SIERRA BLANCA  SIERRA BLANCA    TX    Hudspeth       1882.0   \n",
       "\n",
-      "        continuous  stamp_index  coordinates  duration   latitude   longitude  \n",
-      "2             True          2.0         True      38.0  38.422222  -94.154167  \n",
-      "5             True          3.0         True      11.0  32.568220  -81.992340  \n",
-      "7             True          6.0         True       7.0  34.577053  -82.623466  \n",
-      "8             True          0.0         True     229.0  40.898967  -77.452199  \n",
-      "11            True          4.0         True      24.0  37.038386  -92.947119  \n",
-      "...            ...          ...          ...       ...        ...         ...  \n",
-      "166129        True          0.0         True     114.0  48.584330 -109.031700  \n",
-      "166131        True          5.0         True      19.0  37.434740  -97.389210  \n",
-      "166133        True          2.0         True      21.0  35.619210 -100.190700  \n",
-      "166136        True          4.0         True      18.0  33.279830  -98.728670  \n",
-      "166137        True          0.0         True     139.0  31.175930 -105.360000  \n",
+      "        continuous  stamp_index  coordinates   latitude   longitude  \n",
+      "2             True          2.0         True  38.422222  -94.154167  \n",
+      "5             True          3.0         True  32.568220  -81.992340  \n",
+      "7             True          6.0         True  34.577053  -82.623466  \n",
+      "8             True          0.0         True  40.898967  -77.452199  \n",
+      "11            True          4.0         True  37.038386  -92.947119  \n",
+      "...            ...          ...          ...        ...         ...  \n",
+      "166129        True          0.0         True  48.584330 -109.031700  \n",
+      "166131        True          5.0         True  37.434740  -97.389210  \n",
+      "166133        True          2.0         True  35.619210 -100.190700  \n",
+      "166136        True          4.0         True  33.279830  -98.728670  \n",
+      "166137        True          0.0         True  31.175930 -105.360000  \n",
       "\n",
-      "[112490 rows x 11 columns]\n",
+      "[112490 rows x 10 columns]\n",
       "Non-convertible values in 'established' column:\n",
       "                  name            orig_name state     orig_county  \\\n",
       "80712         ELKRIDGE         ELKRIDGE (2)    MD          Howard   \n",
@@ -44,19 +44,12 @@
       "83431  FORT WASHINGTON  FORT WASHINGTON (2)    MD  Prince Georges   \n",
       "43810       PARK HILLS           PARK HILLS    MO    St. Francois   \n",
       "\n",
-      "       established  continuous  stamp_index  coordinates  duration   latitude  \\\n",
-      "80712       2000.0        True          0.0         True      21.0  39.190580   \n",
-      "37044       1999.0        True          0.0         True      22.0  25.784469   \n",
-      "18486       1999.0       False          2.0         True     -90.0  32.639026   \n",
-      "83431       1996.0        True          0.0         True      25.0  38.730840   \n",
-      "43810       1995.0        True          0.0         True      26.0  37.850758   \n",
-      "\n",
-      "       longitude  \n",
-      "80712 -76.747780  \n",
-      "37044 -80.132489  \n",
-      "18486 -89.092281  \n",
-      "83431 -76.991650  \n",
-      "43810 -90.521844  \n"
+      "       established  continuous  stamp_index  coordinates   latitude  longitude  \n",
+      "80712       2000.0        True          0.0         True  39.190580 -76.747780  \n",
+      "37044       1999.0        True          0.0         True  25.784469 -80.132489  \n",
+      "18486       1999.0       False          2.0         True  32.639026 -89.092281  \n",
+      "83431       1996.0        True          0.0         True  38.730840 -76.991650  \n",
+      "43810       1995.0        True          0.0         True  37.850758 -90.521844  \n"
      ]
     }
    ],
@@ -66,7 +59,7 @@
     "# Read the CSV file\n",
     "df = pd.read_csv(\"postoffice.csv\")\n",
     "\n",
-    "columns_to_remove = ['alt_name', 'discontinued', 'county1', 'county2', 'county3',  'id', 'gnis_name', 'gnis_match', 'gnis_county', 'gnis_state', 'gnis_feature_id', 'gnis_feature_class', 'gnis_orig_name', 'gnis_orig_county', 'gnis_latitude', 'gnis_longitude', 'gnis_elev_in_m', 'gnis_dist']\n",
+    "columns_to_remove = ['duration', 'alt_name', 'discontinued', 'county1', 'county2', 'county3',  'id', 'gnis_name', 'gnis_match', 'gnis_county', 'gnis_state', 'gnis_feature_id', 'gnis_feature_class', 'gnis_orig_name', 'gnis_orig_county', 'gnis_latitude', 'gnis_longitude', 'gnis_elev_in_m', 'gnis_dist']\n",
     "\n",
     "# Remove the specified columns\n",
     "df_cleaned = df.drop(columns=columns_to_remove)\n",
@@ -77,7 +70,7 @@
     "#df_cleaned = df_cleaned[df_cleaned['duration'].isna()]\n",
     "\n",
     "# Calculate 'duration' based on 'established' column if it's missing\n",
-    "df_cleaned['duration'] = df_cleaned.apply(lambda row: (2021 - row['established']) if pd.isnull(row['duration']) else row['duration'], axis=1)\n",
+    "#df_cleaned['duration'] = df_cleaned.apply(lambda row: (2021 - row['established']) if pd.isnull(row['duration']) else row['duration'], axis=1)\n",
     "\n",
     "print(df_cleaned)\n",
     "\n",
@@ -101,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -110,30 +103,12 @@
      "text": [
       "Rows with NA values removed. Cleaned data saved to postoffice_cleaned.csv\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/mt/rp9xph9j5nvb8zt52znkhhr00000gn/T/ipykernel_46903/515352458.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_top_1000_recent['duration'] = df_top_1000_recent['duration'].astype(int)\n",
-      "/var/folders/mt/rp9xph9j5nvb8zt52znkhhr00000gn/T/ipykernel_46903/515352458.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_top_1000_recent['established'] = df_top_1000_recent['established'].astype(int)\n"
-     ]
     }
    ],
    "source": [
     "\n",
     "# Convert 'duration' and 'established' columns to integers\n",
-    "df_top_1000_recent['duration'] = df_top_1000_recent['duration'].astype(int)\n",
+    "#df_top_1000_recent['duration'] = df_top_1000_recent['duration'].astype(int)\n",
     "df_top_1000_recent['established'] = df_top_1000_recent['established'].astype(int)\n",
     "\n",
     "\n",
@@ -145,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +135,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read the cleaned CSV file\n",
-    "df_cleaned = pd.read_csv(\"postoffice_cleaned_top1000.csv\")\n",
+    "df_cleaned = pd.read_csv(\"postoffice_cleaned.csv\")\n",
     "\n",
     "# Dictionary mapping short names to long names of states\n",
     "state_names_long = {\n",
