--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,40 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               name state  established  stamp_index  coordinates   latitude  \\\n",
-      "14           ABAUGH    AR       1928.0          1.0         True  35.781747   \n",
-      "163          ACTION    AL       1924.0          5.0         True  33.426775   \n",
-      "220           ADAMS    MS       1950.0          1.0         True  32.159874   \n",
-      "295        ADELBERT    MO       1922.0          4.0         True  37.970883   \n",
-      "467       ALABASTER    AL       1951.0          0.0         True  33.217264   \n",
-      "...             ...   ...          ...          ...          ...        ...   \n",
-      "166010       ZAMORA    NM       1938.0          2.0         True  35.079570   \n",
-      "166013         ZANE    UT       1925.0          5.0         True  37.925250   \n",
-      "166022     ZARAGOZA    TX       1925.0          2.0         True  26.680060   \n",
-      "166056       ZENIFF    AZ       1922.0          3.0         True  34.577260   \n",
-      "166072  ZEPHYR COVE    NV       1930.0          0.0         True  38.985540   \n",
+      "               name        state  established  stamp_index  coordinates  \\\n",
+      "14           ABAUGH     Arkansas       1928.0          1.0         True   \n",
+      "163          ACTION      Alabama       1924.0          5.0         True   \n",
+      "220           ADAMS  Mississippi       1950.0          1.0         True   \n",
+      "295        ADELBERT     Missouri       1922.0          4.0         True   \n",
+      "467       ALABASTER      Alabama       1951.0          0.0         True   \n",
+      "...             ...          ...          ...          ...          ...   \n",
+      "166010       ZAMORA   New Mexico       1938.0          2.0         True   \n",
+      "166013         ZANE         Utah       1925.0          5.0         True   \n",
+      "166022     ZARAGOZA        Texas       1925.0          2.0         True   \n",
+      "166056       ZENIFF      Arizona       1922.0          3.0         True   \n",
+      "166072  ZEPHYR COVE       Nevada       1930.0          0.0         True   \n",
       "\n",
-      "         longitude  \n",
-      "14      -93.501574  \n",
-      "163     -86.735265  \n",
-      "220     -90.560654  \n",
-      "295     -90.710130  \n",
-      "467     -86.824298  \n",
-      "...            ...  \n",
-      "166010 -106.389100  \n",
-      "166013 -113.583300  \n",
-      "166022  -98.412510  \n",
-      "166056 -110.378200  \n",
-      "166072 -119.942900  \n",
+      "         latitude   longitude  \n",
+      "14      35.781747  -93.501574  \n",
+      "163     33.426775  -86.735265  \n",
+      "220     32.159874  -90.560654  \n",
+      "295     37.970883  -90.710130  \n",
+      "467     33.217264  -86.824298  \n",
+      "...           ...         ...  \n",
+      "166010  35.079570 -106.389100  \n",
+      "166013  37.925250 -113.583300  \n",
+      "166022  26.680060  -98.412510  \n",
+      "166056  34.577260 -110.378200  \n",
+      "166072  38.985540 -119.942900  \n",
       "\n",
-      "[4175 rows x 7 columns]\n"
+      "[4437 rows x 7 columns]\n"
      ]
     }
    ],
@@ -55,14 +55,32 @@
     "df_cleaned = df_cleaned.dropna(subset=['latitude', 'longitude', 'established'])\n",
     "\n",
     "# Filter the DataFrame based on the condition\n",
-    "df_cleaned = df_cleaned[df_cleaned['established'].apply(lambda x: 2021 - x < count)]\n",
+    "df_cleaned = df_cleaned[df_cleaned['established'].apply(lambda x: 2021 - x <= count)]\n",
     "\n",
-    "print(df_cleaned)\n"
+    "state_names_long = {\n",
+    "    'AL': 'Alabama', 'AK': 'Alaska', 'AZ': 'Arizona', 'AR': 'Arkansas', 'CA': 'California',\n",
+    "    'CO': 'Colorado', 'CT': 'Connecticut', 'DE': 'Delaware', 'FL': 'Florida', 'GA': 'Georgia',\n",
+    "    'HI': 'Hawaii', 'ID': 'Idaho', 'IL': 'Illinois', 'IN': 'Indiana', 'IA': 'Iowa',\n",
+    "    'KS': 'Kansas', 'KY': 'Kentucky', 'LA': 'Louisiana', 'ME': 'Maine', 'MD': 'Maryland',\n",
+    "    'MA': 'Massachusetts', 'MI': 'Michigan', 'MN': 'Minnesota', 'MS': 'Mississippi', 'MO': 'Missouri',\n",
+    "    'MT': 'Montana', 'NE': 'Nebraska', 'NV': 'Nevada', 'NH': 'New Hampshire', 'NJ': 'New Jersey',\n",
+    "    'NM': 'New Mexico', 'NY': 'New York', 'NC': 'North Carolina', 'ND': 'North Dakota', 'OH': 'Ohio',\n",
+    "    'OK': 'Oklahoma', 'OR': 'Oregon', 'PA': 'Pennsylvania', 'RI': 'Rhode Island', 'SC': 'South Carolina',\n",
+    "    'SD': 'South Dakota', 'TN': 'Tennessee', 'TX': 'Texas', 'UT': 'Utah', 'VT': 'Vermont',\n",
+    "    'VA': 'Virginia', 'WA': 'Washington', 'WV': 'West Virginia', 'WI': 'Wisconsin', 'WY': 'Wyoming'\n",
+    "}\n",
+    "\n",
+    "# Apply mapping to change state codes to full state names\n",
+    "df_cleaned['state'] = df_cleaned['state'].map(state_names_long)\n",
+    "\n",
+    "print(df_cleaned)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +96,7 @@
     "# Convert 'duration' and 'established' columns to integers\n",
     "#df_top_1000_recent['duration'] = df_top_1000_recent['duration'].astype(int)\n",
     "df_cleaned['established'] = df_cleaned['established'].astype(int)\n",
+    "df_cleaned['stamp_index'] = df_cleaned['stamp_index'].astype(int)\n",
     "\n",
     "\n",
     "# Write the cleaned data to a new CSV file\n",
@@ -88,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
